--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
+    "lint": "eslint .",
     "build": "remix build",
     "dev": "remix dev",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "format:prisma": "npx prisma format",
+    "build:db": "npx prisma generate",
+    "update:db": "npx prisma db push"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@prisma/client": "^5.0.0",
     "@remix-run/css-bundle": "^1.18.1",
     "@remix-run/node": "^1.18.1",
     "@remix-run/react": "^1.18.1",
@@ -24,6 +29,7 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.38.0",
+    "prisma": "^5.0.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
   },
